[package]
authors = ["Maarten Vos <maarten@mrtn.run>"]
categories = ["api-bindings"]
description = "A Rust crate for interacting with the Bungie.net API"
keywords = ["bungie", "destiny2"]
license = "MIT"
name = "bungie"
readme = "README.md"
repository = "https://github.com/inferiormartin/bungie-rs"
version = "0.2.1"
edition = "2018"

[badges]
travis-ci = { repository = "inferiormartin/bungie-rs", branch = "master" }

[dependencies]
hyper = "0.13.9"
reqwest = {version = "0.10.9", features = ["json"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
anyhow = "1.0.34"
async-trait = "0.1.42"

[dev-dependencies]
dotenv = "0.15.0"
async-attributes = "1.1.1"
async-std = "1.7.0"
