[package]
authors = [
    "Maarten Vos <maarten@mrtn.run>",
    "Patrick White <patrick@patrickwhite.org>"
]
categories = ["api-bindings"]
description = "Unofficial Bungie.net API async API"
keywords = ["bungie", "destiny2"]
license = "MIT"
name = "async-bungie"
readme = "README.md"
repository = "https://github.com/inferiormartin/bungie-rs"
version = "0.1.0"
edition = "2018"

[badges]
travis-ci = { repository = "inferiormartin/bungie-rs", branch = "master" }

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.60"
anyhow = "1.0.34"
async-trait = "0.1.42"
surf = "2.1.0"

[dev-dependencies]
dotenv = "0.15.0"
async-attributes = "1.1.1"
async-std = "1.7.0"
